@@ -319,9 +319,15 @@ public:
             for( int sublen=0; path[sublen]!='\0'; sublen++ ) {
                 if( sublen>0 && path[sublen]==DIRSEP_C && path[sublen+1]!=DIRSEP_C ) {
                     std::string subpath(path, sublen);
-                    if( !CreateDirectory( subpath.c_str(), NULL ) &&
-                        GetLastError()!=ERROR_ALREADY_EXISTS )
-                        throw rscerror("mkdir failed", Error2errno(GetLastError()), subpath.c_str() );
+					if( !CreateDirectory( subpath.c_str(), NULL ) && GetLastError()!=ERROR_ALREADY_EXISTS ) {
+						// "Creating" a drive letter may fail for a whole host of reasons while actually succeeding
+						if( sublen!=3 || subpath[1]!=':' ||
+							// Got this far in the "if" only if we tried to create something of the form C:
+							// Only a ERROR_INVALID_DRIVE actually means an error
+							GetLastError()==ERROR_INVALID_DRIVE )
+
+							throw rscerror("mkdir failed", Error2errno(GetLastError()), subpath.c_str() );
+					}
                 }
             }
 
